TestLocalZippedProjects migration (phase 2.6)